# trab_final_DE_programming

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.yaml
data/datasets-csv-pedidos-main/: README.md
src/relatorio_pedidos/: __init__.py
src/relatorio_pedidos/config/: __init__.py  settings.py
src/relatorio_pedidos/io_utils/: __init__.py  data_handler.py  schemas.py
src/relatorio_pedidos/pipeline/: __init__.py  pipeline.py
src/relatorio_pedidos/processing/: __init__.py  transformations.py
src/relatorio_pedidos/session/: __init__.py  spark_session.py
tests/: conftest.py  test_relatorio_pedidos_service.py  test_transformation_unit.py
